syntax = "proto3";

package main;

option go_package = "./proto";

// 添加会员签到记录
message AddMemberSignLogReq {
  int64 id = 1; //
  int64 member_id = 2; //会员ID
  string sign_date = 3; //签到日期
  int32 continue_days = 4; //连续签到天数
  int32 points = 5; //获得积分
}

message AddMemberSignLogResp {
  string pong = 1;
}

// 查询会员签到记录详情
message QueryMemberSignLogDetailReq {
    int64 id = 1;
}

message QueryMemberSignLogDetailResp {
  int64 id = 1; //
  int64 member_id = 2; //会员ID
  string sign_date = 3; //签到日期
  int32 continue_days = 4; //连续签到天数
  int32 points = 5; //获得积分
  string create_time = 6; //

}

// 分页查询会员签到记录列表
message QueryMemberSignLogListReq {
  int64 member_id = 1; //会员ID
  string sign_date = 2; //签到日期
  int32 page_num = 3; //第几页
  int32 page_size = 4; //每页的数量
}

message MemberSignLogListData {
  int64 id = 1; //
  int64 member_id = 2; //会员ID
  string sign_date = 3; //签到日期
  int32 continue_days = 4; //连续签到天数
  int32 points = 5; //获得积分
  string create_time = 6; //

}

message QueryMemberSignLogListResp {
  int64 total = 1;
  repeated  MemberSignLogListData list = 2;
}

// 会员签到记录
service MemberSignLogService {
  // 添加会员签到记录
  rpc AddMemberSignLog(AddMemberSignLogReq) returns (AddMemberSignLogResp){}

  // 查询会员签到记录详情
   rpc QueryMemberSignLogDetail(QueryMemberSignLogDetailReq) returns (QueryMemberSignLogDetailResp){}
  // 查询会员签到记录列表
  rpc QueryMemberSignLogList(QueryMemberSignLogListReq) returns (QueryMemberSignLogListResp){}


}
